feat(core): RFC7807 ProblemDetail error responses