@@ -1,21 +1,19 @@
 package com.coactivity.controller.advice;
 
-import com.coactivity.controller.dto.response.ApiErrorResponse;
-import com.coactivity.service.exception.AuthorizationException;
-import com.coactivity.service.exception.ConflictException;
-import com.coactivity.service.exception.NotificationDeliveryException;
-import com.coactivity.service.exception.ResourceNotFoundException;
-import com.coactivity.service.exception.TooManyRequestsException;
-import com.coactivity.service.exception.ValidationException;
+import com.coactivity.service.exception.ApiFieldError;
+import com.coactivity.service.exception.DomainException;
+import com.coactivity.web.RequestIdFilter;
 import jakarta.servlet.http.HttpServletRequest;
-import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import java.time.Instant;
+import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -34,117 +32,135 @@ public class GlobalExceptionHandler {
 
   private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
-  @ExceptionHandler(ResourceNotFoundException.class)
-  public ResponseEntity<ApiErrorResponse> handleNotFound(ResourceNotFoundException ex,
-      HttpServletRequest request) {
-    return buildResponse(ex.getMessage(), null, HttpStatus.NOT_FOUND, request, null);
-  }
-
-  @ExceptionHandler(AuthorizationException.class)
-  public ResponseEntity<ApiErrorResponse> handleAuthorization(AuthorizationException ex,
-      HttpServletRequest request) {
-    return buildResponse(ex.getMessage(), ex.getCode(), HttpStatus.FORBIDDEN, request, null);
-  }
-
-  @ExceptionHandler(ValidationException.class)
-  public ResponseEntity<ApiErrorResponse> handleValidation(ValidationException ex,
-      HttpServletRequest request) {
-    return buildResponse(ex.getMessage(), null, HttpStatus.BAD_REQUEST, request, null);
-  }
-
-  @ExceptionHandler(ConflictException.class)
-  public ResponseEntity<ApiErrorResponse> handleConflict(ConflictException ex,
-      HttpServletRequest request) {
-    return buildResponse(ex.getMessage(), ex.getCode(), HttpStatus.CONFLICT, request, null);
-  }
-
-  @ExceptionHandler(NotificationDeliveryException.class)
-  public ResponseEntity<ApiErrorResponse> handleNotificationDelivery(
-      NotificationDeliveryException ex,
-      HttpServletRequest request) {
-    return buildResponse(ex.getMessage(), null, HttpStatus.SERVICE_UNAVAILABLE, request, null);
-  }
-
-  @ExceptionHandler(TooManyRequestsException.class)
-  public ResponseEntity<ApiErrorResponse> handleTooManyRequests(TooManyRequestsException ex,
-      HttpServletRequest request) {
-    return buildResponse(ex.getMessage(), ex.getCode(), HttpStatus.TOO_MANY_REQUESTS, request, null);
+  @ExceptionHandler(DomainException.class)
+  public ResponseEntity<ProblemDetail> handleDomain(DomainException ex, HttpServletRequest request) {
+    return buildProblemDetail(
+        request,
+        ex.getHttpStatus(),
+        ex.getCode(),
+        ex.getMessage(),
+        ex.getErrors());
   }
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
-  public ResponseEntity<ApiErrorResponse> handleMethodArgumentNotValid(
+  public ResponseEntity<ProblemDetail> handleMethodArgumentNotValid(
       MethodArgumentNotValidException ex,
       HttpServletRequest request) {
-    List<String> details = ex.getBindingResult().getFieldErrors().stream()
-        .map(error -> error.getField() + ": " + error.getDefaultMessage())
-        .collect(Collectors.toList());
-    return buildResponse("Validation failed", null, HttpStatus.BAD_REQUEST, request, details);
+    List<ApiFieldError> errors = ex.getBindingResult().getFieldErrors().stream()
+        .map(error -> new ApiFieldError(error.getField(), error.getDefaultMessage(), error.getCode()))
+        .toList();
+    return buildProblemDetail(request, HttpStatus.BAD_REQUEST, "VALIDATION_FAILED",
+        "Validation failed", errors);
   }
 
   @ExceptionHandler(ConstraintViolationException.class)
-  public ResponseEntity<ApiErrorResponse> handleConstraintViolation(
+  public ResponseEntity<ProblemDetail> handleConstraintViolation(
       ConstraintViolationException ex,
       HttpServletRequest request) {
-    List<String> details = ex.getConstraintViolations().stream()
-        .map(ConstraintViolation::getMessage)
-        .collect(Collectors.toList());
-    return buildResponse("Validation failed", null, HttpStatus.BAD_REQUEST, request, details);
+    List<ApiFieldError> errors = ex.getConstraintViolations().stream()
+        .map(violation -> new ApiFieldError(
+            violation.getPropertyPath() == null ? null : violation.getPropertyPath().toString(),
+            violation.getMessage(),
+            violation.getConstraintDescriptor() == null
+                ? null
+                : violation.getConstraintDescriptor().getAnnotation().annotationType().getSimpleName()))
+        .toList();
+    return buildProblemDetail(request, HttpStatus.BAD_REQUEST, "VALIDATION_FAILED",
+        "Validation failed", errors);
   }
 
   @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-  public ResponseEntity<ApiErrorResponse> handleTypeMismatch(MethodArgumentTypeMismatchException ex,
+  public ResponseEntity<ProblemDetail> handleTypeMismatch(MethodArgumentTypeMismatchException ex,
       HttpServletRequest request) {
-    String detail = ex.getName() + ": invalid value";
+    String detail = "invalid value";
     if (ex.getValue() != null) {
       detail = detail + " '" + ex.getValue() + "'";
     }
-    return buildResponse("Validation failed", null, HttpStatus.BAD_REQUEST, request,
-        List.of(detail));
+    ApiFieldError error = new ApiFieldError(ex.getName(), detail, "TYPE_MISMATCH");
+    return buildProblemDetail(request, HttpStatus.BAD_REQUEST, "VALIDATION_FAILED",
+        "Validation failed", List.of(error));
   }
 
   @ExceptionHandler(HttpMessageNotReadableException.class)
-  public ResponseEntity<ApiErrorResponse> handleHttpMessageNotReadable(
+  public ResponseEntity<ProblemDetail> handleHttpMessageNotReadable(
       HttpMessageNotReadableException ex,
       HttpServletRequest request) {
-    return buildResponse("Validation failed", null, HttpStatus.BAD_REQUEST, request,
-        List.of("Request body contains invalid or malformed value"));
+    ApiFieldError error = new ApiFieldError(null,
+        "Request body contains invalid or malformed value", "MALFORMED_JSON");
+    return buildProblemDetail(request, HttpStatus.BAD_REQUEST, "VALIDATION_FAILED",
+        "Validation failed", List.of(error));
   }
 
   @ExceptionHandler({MaxUploadSizeExceededException.class, MultipartException.class})
-  public ResponseEntity<ApiErrorResponse> handleMultipartErrors(Exception ex,
+  public ResponseEntity<ProblemDetail> handleMultipartErrors(Exception ex,
       HttpServletRequest request) {
-    return buildResponse("Validation failed", null, HttpStatus.BAD_REQUEST, request,
-        List.of("Uploaded file exceeds the allowed size or is malformed"));
+    ApiFieldError error = new ApiFieldError(null,
+        "Uploaded file exceeds the allowed size or is malformed", "MULTIPART_INVALID");
+    return buildProblemDetail(request, HttpStatus.BAD_REQUEST, "VALIDATION_FAILED",
+        "Validation failed", List.of(error));
   }
 
   @ExceptionHandler(MissingServletRequestPartException.class)
-  public ResponseEntity<ApiErrorResponse> handleMissingMultipartPart(
+  public ResponseEntity<ProblemDetail> handleMissingMultipartPart(
       MissingServletRequestPartException ex,
       HttpServletRequest request) {
-    return buildResponse("Validation failed", null, HttpStatus.BAD_REQUEST, request,
-        List.of(ex.getRequestPartName() + ": required multipart part is missing"));
+    ApiFieldError error = new ApiFieldError(ex.getRequestPartName(),
+        "required multipart part is missing", "MISSING_PART");
+    return buildProblemDetail(request, HttpStatus.BAD_REQUEST, "VALIDATION_FAILED",
+        "Validation failed", List.of(error));
   }
 
   @ExceptionHandler(Exception.class)
-  public ResponseEntity<ApiErrorResponse> handleUnexpected(Exception ex,
+  public ResponseEntity<ProblemDetail> handleUnexpected(Exception ex,
       HttpServletRequest request) {
     log.error("Unexpected error while processing {} {}", request.getMethod(),
         request.getRequestURI(), ex);
-    return buildResponse("Internal server error", null, HttpStatus.INTERNAL_SERVER_ERROR, request,
-        null);
+    return buildProblemDetail(request, HttpStatus.INTERNAL_SERVER_ERROR, "INTERNAL_ERROR",
+        "Internal server error", List.of());
   }
 
-  private ResponseEntity<ApiErrorResponse> buildResponse(String message, String code,
+  private ResponseEntity<ProblemDetail> buildProblemDetail(HttpServletRequest request,
       HttpStatus status,
-      HttpServletRequest request, List<String> details) {
-    ApiErrorResponse body = new ApiErrorResponse(
-        Instant.now(),
-        status.value(),
-        status.getReasonPhrase(),
-        message,
-        code,
-        request.getRequestURI(),
-        details);
-    return ResponseEntity.status(status).body(body);
+      String code,
+      String detail,
+      List<ApiFieldError> errors) {
+    ProblemDetail problemDetail = ProblemDetail.forStatus(status);
+    problemDetail.setType(URI.create("urn:coactivity:error:" + code));
+    problemDetail.setStatus(status.value());
+    problemDetail.setTitle(resolveTitle(code, status));
+    problemDetail.setDetail(detail);
+    problemDetail.setInstance(URI.create(request.getRequestURI()));
+
+    String traceId = resolveTraceId(request);
+    problemDetail.setProperty("timestamp", Instant.now());
+    problemDetail.setProperty("code", code);
+    problemDetail.setProperty("traceId", traceId);
+    if (errors != null && !errors.isEmpty()) {
+      problemDetail.setProperty("errors", List.copyOf(errors));
+    }
+
+    return ResponseEntity.status(status)
+        .contentType(MediaType.APPLICATION_PROBLEM_JSON)
+        .header(RequestIdFilter.REQUEST_ID_HEADER, traceId)
+        .body(problemDetail);
+  }
+
+  private String resolveTitle(String code, HttpStatus status) {
+    if ("VALIDATION_FAILED".equals(code)) {
+      return "Validation failed";
+    }
+    return status.getReasonPhrase();
+  }
+
+  private String resolveTraceId(HttpServletRequest request) {
+    Object traceId = request.getAttribute(RequestIdFilter.TRACE_ID_ATTRIBUTE);
+    if (traceId instanceof String value && !value.isBlank()) {
+      return value;
+    }
+    String header = request.getHeader(RequestIdFilter.REQUEST_ID_HEADER);
+    if (header != null && !header.isBlank()) {
+      return header.trim();
+    }
+    return UUID.randomUUID().toString();
   }
 }
